Build and deploy containers

--- a/Dockerfile.fedora.build
+++ b/Dockerfile.fedora.build
@@ -1,3 +1,4 @@
+FROM cyberprobe-fedora-dev
 RUN mkdir -p /usr/local/src/cyberprobe
 WORKDIR /usr/local/src/cyberprobe
 RUN git clone http://git.code.sf.net/p/cyberprobe/code .
