--- a/Dockerfile.fedora.dev
+++ b/Dockerfile.fedora.dev
@@ -12,3 +12,5 @@ RUN dnf install -y libtool make
 RUN dnf install -y texinfo-tex
 RUN dnf install -y rpm-build
 RUN luarocks install md5
+RUN dnf install -y cppzmq-devel
+RUN luarocks install lzmq
