--- a/Dockerfile.ubuntu.build
+++ b/Dockerfile.ubuntu.build
@@ -1,7 +1,11 @@
 FROM cyberprobe-ubuntu-dev
+ARG GIT_VERSION=HEAD
 RUN mkdir -p /usr/local/src/cyberprobe
 WORKDIR /usr/local/src/cyberprobe
 RUN git clone http://git.code.sf.net/p/cyberprobe/code .
+RUN echo ${GIT_VERSION}
+RUN git checkout ${GIT_VERSION}
+RUN git status
 RUN autoreconf -i
 RUN ./configure --prefix=/usr/local
 RUN make check
