--- a/Dockerfile.cybermon.deploy
+++ b/Dockerfile.cybermon.deploy
@@ -1,9 +1,8 @@
 
 FROM fedora:24
 
-COPY product/fedora-cyberprobe-0.70-1.fc24.x86_64.rpm cyberprobe.rpm
+ARG VERSION=none
 
-RUN dnf install -y cyberprobe.rpm
 RUN dnf install -y lua-socket lua-json
 RUN dnf install -y tar
 RUN dnf install -y luarocks
@@ -13,6 +12,11 @@ RUN dnf install -y lua-devel
 RUN dnf install -y findutils
 RUN luarocks install lzmq
 RUN luarocks install uuid
+RUN dnf install -y python python-zmq python-requests python-httplib2
+RUN pip install --upgrade google-api-python-client
+
+COPY product/fedora-cyberprobe-${VERSION}-1.fc24.x86_64.rpm cyberprobe.rpm
+RUN dnf install -y cyberprobe.rpm
 
 CMD cybermon 9000 /etc/cyberprobe/zeromq.lua
 
