--- a/Dockerfile.cybermon.deploy
+++ b/Dockerfile.cybermon.deploy
@@ -10,10 +10,12 @@ RUN dnf install -y cppzmq-devel
 RUN dnf install -y gcc
 RUN dnf install -y lua-devel
 RUN dnf install -y findutils
+RUN dnf install -y net-tools
 RUN luarocks install lzmq
 RUN luarocks install uuid
 RUN dnf install -y python python-zmq python-requests python-httplib2
 RUN pip install --upgrade google-api-python-client
+RUN pip install cassandra-driver
 
 COPY product/fedora-cyberprobe-${VERSION}-1.fc24.x86_64.rpm cyberprobe.rpm
 RUN dnf install -y cyberprobe.rpm
