--- a/Dockerfile.debian.build
+++ b/Dockerfile.debian.build
@@ -3,8 +3,7 @@ ARG GIT_VERSION=HEAD
 RUN mkdir -p /usr/local/src/cyberprobe
 WORKDIR /usr/local/src/cyberprobe
 RUN git clone http://git.code.sf.net/p/cyberprobe/code .; git checkout ${GIT_VERSION}
-RUN git status
-RUN autoreconf -i
+RUN autoreconf -fi
 RUN ./configure --prefix=/usr/local
 RUN make check
 RUN make -f pkg.mk deb
