--- a/Dockerfile.debian.dev
+++ b/Dockerfile.debian.dev
@@ -1,8 +1,8 @@
-FROM debian:jessie
+FROM debian:8.6
 RUN apt update
 RUN apt-get install -y git
 RUN apt-get install -y autoconf automake
-RUN apt-get install -y libpcap-dev libboost-dev libboost-regex-dev
+RUN apt-get install -y libpcap-dev libboost-dev libboost-regex-dev libboost-program-options-dev
 RUN apt-get install -y g++
 RUN apt-get install -y libexpat-dev
 RUN apt-get install -y libncurses-dev libreadline-dev
@@ -13,3 +13,4 @@ RUN apt-get install -y tcpdump
 RUN apt-get install -y libtool make
 RUN apt-get install -y build-essential devscripts apt-utils
 RUN apt-get install -y lua5.2 liblua5.2-dev
+RUN apt-get install -y libssl-dev
