--- a/cyberprobe.cfg
+++ b/cyberprobe.cfg
@@ -15,7 +15,7 @@
 
   <!-- Define endpoints to deliver data to. -->
   <endpoints>
-    <endpoint hostname="localhost" port="9000" type="etsi"/>
+    <endpoint hostname="localhost" port="9000" transport="tcp" type="etsi"/>
   </endpoints>
 
 </configuration>
