--- a/Dockerfile.ubuntu.build
+++ b/Dockerfile.ubuntu.build
@@ -2,7 +2,7 @@ FROM cyberprobe-ubuntu-dev
 ARG GIT_VERSION=HEAD
 RUN mkdir -p /usr/local/src/cyberprobe
 WORKDIR /usr/local/src/cyberprobe
-RUN git clone http://git.code.sf.net/p/cyberprobe/code .; git checkout ${GIT_VERSION}
+RUN git clone http://github.com/cybermaggedon/cyberprobe .; git checkout ${GIT_VERSION}
 RUN autoreconf -fi
 RUN ./configure --prefix=/usr/local
 RUN make check
