Added redis-lua to containers for 0.91

--- a/Dockerfile.fedora.dev
+++ b/Dockerfile.fedora.dev
@@ -15,3 +15,4 @@ RUN dnf install -y openssl-devel
 RUN luarocks install md5
 RUN dnf install -y cppzmq-devel
 RUN luarocks install lzmq
+RUN luarocks install redis-lua
