--- a/Dockerfile.cyberprobe.deploy
+++ b/Dockerfile.cyberprobe.deploy
@@ -16,6 +16,7 @@ RUN luarocks install uuid
 RUN dnf install -y python python-zmq python-requests python-httplib2
 RUN pip install --upgrade google-api-python-client
 RUN pip install cassandra-driver
+RUN luarocks install redis-lua
 
 COPY product/fedora-cyberprobe-${VERSION}-1.fc25.x86_64.rpm cyberprobe.rpm
 RUN dnf install -y cyberprobe.rpm
