- Updated to cyberprobe 0.94. - Added dependencies lua-json and uuid which are now needed by auto tests.

--- a/Dockerfile.fedora.dev
+++ b/Dockerfile.fedora.dev
@@ -16,3 +16,4 @@ RUN luarocks install md5
 RUN dnf install -y cppzmq-devel
 RUN luarocks install lzmq
 RUN luarocks install redis-lua
+RUN luarocks install uuid
