--- a/Dockerfile.cyberprobe.deploy
+++ b/Dockerfile.cyberprobe.deploy
@@ -17,6 +17,7 @@ RUN dnf install -y python python-zmq python-requests python-httplib2
 RUN pip install --upgrade google-api-python-client
 RUN pip install cassandra-driver
 RUN luarocks install redis-lua
+RUN luarocks install uuid
 
 COPY product/fedora-cyberprobe-${VERSION}-1.fc25.x86_64.rpm cyberprobe.rpm
 RUN dnf install -y cyberprobe.rpm
