--- a/Dockerfile.cyberprobe.deploy
+++ b/Dockerfile.cyberprobe.deploy
@@ -1,5 +1,5 @@
 
-FROM fedora:26
+FROM fedora:27
 
 ARG VERSION=none
 
@@ -7,11 +7,11 @@ RUN dnf -y update && dnf install -y lua-socket lua-json tar luarocks \
     cppzmq-devel gcc lua-devel findutils net-tools python python-zmq \
     python-requests python-httplib2 && dnf clean all
 RUN luarocks install lzmq && luarocks install uuid && \
-    luarocks install redis-lua && luarocks install uuid  && \
+    luarocks install redis-lua && luarocks install uuid && \
     luarocks install sha1
 RUN pip install --upgrade google-api-python-client cassandra-driver
 
-COPY product/fedora-cyberprobe-${VERSION}-1.fc26.x86_64.rpm cyberprobe.rpm
+COPY product/fedora-cyberprobe-${VERSION}-1.fc27.x86_64.rpm cyberprobe.rpm
 RUN dnf install -y cyberprobe.rpm && dnf clean all
 
 COPY cyberprobe.cfg /cyberprobe.cfg
@@ -19,3 +19,8 @@ RUN cp /cyberprobe.cfg /etc/cyberprobe.cfg
 
 CMD cyberprobe /etc/cyberprobe.cfg
 
+# cybermon receiver port.
+EXPOSE 9000
+
+# ZeroMQ pub/sub port.
+EXPOSE 5555
