--- a/Dockerfile.cybermon.deploy
+++ b/Dockerfile.cybermon.deploy
@@ -3,13 +3,16 @@ FROM fedora:27
 
 ARG VERSION=none
 
-RUN dnf -y update && dnf install -y lua-socket lua-json tar luarocks \
+RUN dnf -y update && \
+    dnf install -y lua-socket lua-json tar luarocks \
     cppzmq-devel gcc lua-devel findutils net-tools python python-zmq \
-    python-requests python-httplib2 && dnf clean all
+    python-requests python-httplib2 GeoIP python2-GeoIP geoipupdate && \
+    dnf clean all
 RUN luarocks install lzmq && luarocks install uuid && \
     luarocks install redis-lua && luarocks install uuid && \
     luarocks install sha1
 RUN pip install --upgrade google-api-python-client cassandra-driver
+RUN geoipupdate
 
 COPY product/fedora-cyberprobe-${VERSION}-1.fc27.x86_64.rpm cyberprobe.rpm
 RUN dnf install -y cyberprobe.rpm && dnf clean all
