--- a/Dockerfile.fedora27.build
+++ b/Dockerfile.fedora27.build
@@ -1,4 +1,4 @@
-FROM cyberprobe-fedora-dev
+FROM cyberprobe-fedora27-dev
 ARG GIT_VERSION=HEAD
 RUN mkdir -p /usr/local/src/cyberprobe
 WORKDIR /usr/local/src/cyberprobe
