--- a/Dockerfile.base.build
+++ b/Dockerfile.base.build
@@ -1,4 +1,4 @@
-FROM cyberprobe-fedora27-dev
+FROM cyberprobe-base-dev
 ARG GIT_VERSION=HEAD
 RUN mkdir -p /usr/local/src/cyberprobe
 WORKDIR /usr/local/src/cyberprobe
