--- a/Dockerfile.cybermon.deploy
+++ b/Dockerfile.cybermon.deploy
@@ -1,5 +1,5 @@
 
-FROM fedora:27
+FROM fedora:28
 
 ARG PKG
 
@@ -12,10 +12,12 @@ RUN luarocks install lzmq && luarocks install uuid && \
     luarocks install redis-lua && luarocks install uuid && \
     luarocks install sha1
 RUN pip install --upgrade google-api-python-client cassandra-driver
-RUN geoipupdate
+RUN geoipupdate || true
 
 COPY ${PKG} cyberprobe.rpm
 RUN dnf install -y cyberprobe.rpm && dnf clean all
+RUN mkdir /etc/cyberprobe/amqp/
+COPY amqp/amqp/*.lua /etc/cyberprobe/amqp/
 
 CMD cybermon -p 9000 -c /etc/cyberprobe/zeromq.lua
 
