--- a/Dockerfile.cybermon.deploy
+++ b/Dockerfile.cybermon.deploy
@@ -10,14 +10,12 @@ RUN dnf -y update && \
     dnf clean all
 RUN luarocks install lzmq && luarocks install uuid && \
     luarocks install redis-lua && luarocks install uuid && \
-    luarocks install sha1
+    luarocks install sha1 && luarocks install amqp
 RUN pip install --upgrade google-api-python-client cassandra-driver
 RUN geoipupdate || true
 
 COPY ${PKG} cyberprobe.rpm
 RUN dnf install -y cyberprobe.rpm && dnf clean all
-RUN mkdir /etc/cyberprobe/amqp/
-COPY amqp/amqp/*.lua /etc/cyberprobe/amqp/
 
 CMD cybermon -p 9000 -c /etc/cyberprobe/zeromq.lua
 
