--- a/Dockerfile.cyberprobe.deploy
+++ b/Dockerfile.cyberprobe.deploy
@@ -6,7 +6,7 @@ ARG PKG
 RUN dnf -y update && \
     dnf install -y lua-socket lua-json tar luarocks \
     cppzmq-devel gcc lua-devel findutils net-tools python3 python3-zmq \
-    python3-requests python3-httplib2 GeoIP python3-GeoIP geoipupdate \
+    python3-requests python3-httplib2 GeoIP python3-geoip2 geoipupdate \
     python3-pika && \
     dnf clean all
 
