--- a/debian-jessie/Dockerfile.build
+++ b/debian-jessie/Dockerfile.build
@@ -6,4 +6,4 @@ WORKDIR /usr/local/src/cyberprobe/cyberprobe-${VERSION}
 RUN sed -i 's/libreadline7/libreadline6/' debian/control
 RUN autoreconf -fi
 RUN ./configure --prefix=/usr/local
-RUN make -f pkg.mk deb
+RUN DEB_CXXFLAGS_APPEND=-std=c++11 make -f pkg.mk deb
