--- a/ubuntu-cosmic/Dockerfile.build
+++ b/ubuntu-cosmic/Dockerfile.build
@@ -1,9 +1,8 @@
-FROM cyberprobe-ubuntu-xenial-dev
+FROM cyberprobe-ubuntu-cosmic-dev
 ARG SRC
 ARG VERSION
 ADD ${SRC} /usr/local/src/cyberprobe/
 WORKDIR /usr/local/src/cyberprobe/cyberprobe-${VERSION}
-RUN sed -i 's/libreadline7/libreadline6/' debian/control
 RUN autoreconf -fi
 RUN ./configure --prefix=/usr/local
-RUN DEB_CXXFLAGS_APPEND=-std=c++11 make -f pkg.mk deb
+RUN make -f pkg.mk deb
