--- a/f29/Dockerfile.dev
+++ b/f29/Dockerfile.dev
@@ -3,7 +3,7 @@ RUN dnf install -y git autoconf automake
 RUN dnf install -y texinfo-tex
 RUN dnf install -y libpcap-devel boost-devel gcc-c++
 RUN dnf install -y expat-devel lua-devel 
-RUN dnf install -y readline-devel 
+RUN dnf install -y ncurses-devel readline-devel 
 RUN dnf install -y texinfo texlive
 RUN dnf install -y python
 RUN dnf install -y tcpdump tar
