--- a/ubuntu-zesty/Dockerfile.dev
+++ b/ubuntu-zesty/Dockerfile.dev
@@ -8,7 +8,7 @@ RUN apt-get install -y autoconf automake
 RUN apt-get install -y libpcap-dev libboost-program-options-dev
 RUN apt-get install -y g++
 RUN apt-get install -y libexpat-dev
-RUN apt-get install -y libreadline-dev
+RUN apt-get install -y ncurses-dev libreadline-dev
 RUN apt-get install -y python
 RUN apt-get install -y tcpdump
 RUN apt-get install -y libtool make
