--- a/ubuntu-cosmic/Dockerfile.build
+++ b/ubuntu-cosmic/Dockerfile.build
@@ -3,6 +3,7 @@ ARG SRC
 ARG VERSION
 ADD ${SRC} /usr/local/src/cyberprobe/
 WORKDIR /usr/local/src/cyberprobe/cyberprobe-${VERSION}
+RUN sed -i 's/libboost-program-options1.62.0/libboost-program-options1.67.0/' debian/control
 RUN autoreconf -fi
 RUN ./configure --prefix=/usr/local
 RUN make -f pkg.mk deb
