--- a/ubuntu-xenial/Dockerfile.build
+++ b/ubuntu-xenial/Dockerfile.build
@@ -4,6 +4,7 @@ ARG VERSION
 ADD ${SRC} /usr/local/src/cyberprobe/
 WORKDIR /usr/local/src/cyberprobe/cyberprobe-${VERSION}
 RUN sed -i 's/libreadline7/libreadline6/' debian/control
+RUN sed -i 's/libboost-program-options1.62.0/libboost-program-options1.58.0/' debian/control
 RUN autoreconf -fi
 RUN ./configure --prefix=/usr/local
 RUN DEB_CXXFLAGS_APPEND=-std=c++11 make -f pkg.mk deb
