--- a/Dockerfile.base.dev
+++ b/Dockerfile.base.dev
@@ -4,6 +4,7 @@ RUN dnf install -y texinfo-tex
 RUN dnf install -y libpcap-devel boost-devel gcc-c++
 RUN dnf install -y expat-devel lua-devel 
 RUN dnf install -y ncurses-devel readline-devel 
+RUN dnf install -y lua-json lua-socket
 RUN dnf install -y texinfo texlive
 RUN dnf install -y python
 RUN dnf install -y tcpdump tar
