--- a/amazon-2/Dockerfile.build
+++ b/amazon-2/Dockerfile.build
@@ -1,4 +1,4 @@
 FROM cyberprobe-amazon-2-dev
 ARG SRC_RPM
 COPY ${SRC_RPM} /
-RUN rpmbuild --rebuild *.src.rpm
+RUN rpmbuild --rebuild --define 'optflags -DTLS_method=TLSv1_2_method' *.src.rpm
