--- a/ubuntu-bionic/Dockerfile.dev
+++ b/ubuntu-bionic/Dockerfile.dev
@@ -14,4 +14,6 @@ RUN apt-get install -y build-essential devscripts apt-utils
 RUN apt-get install -y lua5.2 liblua5.2-dev
 RUN apt-get install -y libssl-dev
 RUN apt-get install -y dh-make
+RUN apt-get install -y protobuf-compiler libprotobuf10 libprotobuf-dev
+RUN apt-get install -y libgrpc++-dev libgrpc++1 protobuf-compiler-grpc
 WORKDIR /
