--- a/debian-stretch/Dockerfile.dev
+++ b/debian-stretch/Dockerfile.dev
@@ -13,4 +13,5 @@ RUN apt-get install -y libtool make
 RUN apt-get install -y build-essential devscripts apt-utils
 RUN apt-get install -y lua5.2 liblua5.2-dev
 RUN apt-get install -y libssl-dev
+RUN apt-get install -y protobuf-compiler libprotobuf10 libprotobuf-dev
 WORKDIR /
