--- a/ubuntu-disco/Dockerfile.dev
+++ b/ubuntu-disco/Dockerfile.dev
@@ -1,4 +1,4 @@
-FROM debian:jessie
+FROM ubuntu:19.04
 RUN apt update
 RUN apt-get install -y git
 RUN apt-get install -y texinfo texlive
@@ -13,5 +13,7 @@ RUN apt-get install -y libtool make
 RUN apt-get install -y build-essential devscripts apt-utils
 RUN apt-get install -y lua5.2 liblua5.2-dev
 RUN apt-get install -y libssl-dev
-RUN apt-get install -y protobuf-compiler libprotobuf9 libprotobuf-dev
+RUN apt-get install -y dh-make
+RUN apt-get install -y protobuf-compiler libprotobuf17 libprotobuf-dev
+RUN apt-get install -y libgrpc++-dev libgrpc++1 protobuf-compiler-grpc
 WORKDIR /
