--- a/Dockerfile.cyberprobe.deploy
+++ b/Dockerfile.cyberprobe.deploy
@@ -1,22 +1,16 @@
 
-FROM fedora:30
+FROM fedora:32
 
 ARG PKG
 
 RUN dnf -y update && \
-    dnf install -y lua-socket lua-json tar luarocks \
-    cppzmq-devel gcc lua-devel findutils net-tools python3 python3-zmq \
-    python3-requests python3-httplib2 GeoIP python3-geoip2 geoipupdate \
-    python3-pika && \
+    dnf install -y lua-socket lua-json lua-http tar luarocks \
+    cppzmq-devel gcc lua-devel findutils net-tools && \
     dnf clean all
 
 RUN luarocks install lzmq && luarocks install uuid && \
     luarocks install redis-lua && luarocks install uuid && \
     luarocks install sha1 && luarocks install amqp
-
-RUN pip3 install --upgrade google-api-python-client cassandra-driver
-
-RUN geoipupdate
 
 COPY ${PKG} cyberprobe.rpm
 RUN dnf install -y cyberprobe.rpm && dnf clean all
